:sparkles: A lot of features that I forgot to commit
